--- a/src/components/Navbar/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/src/components/Navbar/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -9,6 +9,8 @@
   & .WorldIcon {
     margin-bottom: 5px;
     margin-right: 10px;
+    stroke: white;
+    stroke-width: 0.5px;
     width: 20px;
   }
 
@@ -16,7 +18,7 @@
     -webkit-appearance: none;
     background: transparent;
     border: none;
-    color: var(--conun-blue);
+    color: #fff;
     cursor: pointer;
     transform: translateX(-2px);
   }
