--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,10 +5,10 @@
   height: calc(60px - 4rem);
   justify-content: space-between;
   left: 0;
-  padding: 1rem;
+  padding: 1rem var(--website-padding);
   position: absolute;
   top: 20px;
-  width: calc(100vw - 4rem);
+  width: calc(100vw - var(--website-padding) * 2);
   z-index: 1;
 
   &.isMobile {
